feat: database config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=backend
+# Database config
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+
+# JPA config
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-plataform=org.hibernate.dialect.PostgreSQLDialect
+
+# Others configs
+spring.banner.location=classpath:/banner.txt
+spring.output.ansi.enabled=ALWAYS
